source/blender/render/extern/include/RE_render_ext.h
@@ -61,5 +61,7 @@ void RE_free_sample_material(struct Material *mat);
 void RE_sample_material_color(struct Material *mat, float color[3], float *alpha, const float volume_co[3], const float surface_co[3],
                               int face_index, short hit_quad, struct DerivedMesh *orcoDm, struct Object *ob);
 
+void RE_init_texture_rng(void);
+void RE_exit_texture_rng(void);
 #endif /* __RE_RENDER_EXT_H__ */
 
