source/blender/render/intern/source/render_texture.c
@@ -85,7 +85,18 @@
 extern struct Render R;
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
+static RNG_THREAD_ARRAY *random_tex_array;
 
+
+void RE_init_texture_rng()
+{
+	random_tex_array = BLI_rng_threaded_new();
+}
+
+void RE_exit_texture_rng()
+{
+	BLI_rng_threaded_free(random_tex_array);
+}
 
 
 static void init_render_texture(Render *re, Tex *tex)
@@ -709,19 +720,23 @@ static float voronoiTex(Tex *tex, const float texvec[3], TexResult *texres)
 
 /* ------------------------------------------------------------------------- */
 
-static int texnoise(Tex *tex, TexResult *texres)
+static int texnoise(Tex *tex, TexResult *texres, int thread)
 {
 	float div=3.0;
-	int val, ran, loop;
+	int val, ran, loop, shift = 30;
 	
-	ran= BLI_rand();
-	val= (ran & 3);
+	ran=  BLI_rng_thread_rand(random_tex_array, thread);
 	
 	loop= tex->noisedepth;
+
+	/* start from top bits since they have more variance */
+	val= ((ran >> shift) & 3);
+	shift -= 2;
+	
 	while (loop--) {
-		ran= (ran>>2);
-		val*= (ran & 3);
-		div*= 3.0f;
+		val += ((ran >> shift) & 3);
+		div += 3.0f;
+		shift -= 2;		
 	}
 	
 	texres->tin= ((float)val)/div;
@@ -1127,7 +1142,7 @@ static int multitex(Tex *tex, float texvec[3], float dxt[3], float dyt[3], int o
 				retval = stucci(tex, texvec, texres);
 				break;
 			case TEX_NOISE:
-				retval = texnoise(tex, texres);
+				retval = texnoise(tex, texres, thread);
 				break;
 			case TEX_IMAGE:
 				if (osatex) retval = imagewraposa(tex, tex->ima, NULL, texvec, dxt, dyt, texres, pool);
